# cargo-pio

./: Cargo.toml
.github/workflows/: publish-dry-run.yml
getpkg/: Cargo.toml
getpkg/src/: dl_cache.rs  index.rs  lib.rs  package.rs  progress.rs
src/: bindgen.rs  cli.rs  lib.rs
src/cli/: arg.rs  parse_args.rs  seperate_args.rs
src/pio/: project.rs
