[package]
name = "getpkg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
ureq = "2.2"
zip = { version = "0.5", default-featues = false, features = ["bzip2", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enumflags2 = "0.7.1"
pathdiff = "0.2"
url = "2.2"
indicatif = "0.16"